// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box component 
  background: "danger"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--danger Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "light"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--light Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "primary"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--primary Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "secondary"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--secondary Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "secondary-lightest"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--secondary-lightest Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "success"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--success Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "transparent"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  background: "warning"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--warning Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "danger"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--danger Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "default"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--default Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "none"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "primary"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--primary Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "secondary"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--secondary Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "success"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--success Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderColor: "warning"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--warning Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "05"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--05 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "2-5"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--2-5 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "10"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--10 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "15"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--15 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "20"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--20 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "30"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--30 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "40"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--40 Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "full"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--full Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  borderRadius: "none"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "block"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "flex"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "grid"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--grid Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "inline"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--inline Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "inline-block"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--inline-block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "inline-flex"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--inline-flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  display: "inline-grid"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--inline-grid Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  flex: 1
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-flex--1"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  flex: 2
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-flex--2"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  flex: 3
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-flex--3"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  flex: 4
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-flex--4"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  gap: "l"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-gap--l"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  gap: "m"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-gap--m"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  gap: "s"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-gap--s"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  gap: "xs"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--flex Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static Box-gap--xs"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  padding: "l"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      padding="l"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  padding: "m"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      padding="m"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  padding: "none"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      padding="none"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  padding: "s"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      padding="s"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  padding: "xl"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      padding="xl"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  padding: "xs"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      padding="xs"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  position: "absolute"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--absolute"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  position: "fixed"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--fixed"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  position: "relative"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--relative"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  position: "static"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  position: "sticky"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--sticky"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  shadow: "l"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--l Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  shadow: "m"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--m Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  shadow: "none"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component 
  shadow: "s"
 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--s Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component with custom dimensions renders with percentage values 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      style="width: 50%; height: 50%;"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component with custom dimensions renders with width and height props 1`] = `
<body>
  <div>
    <div
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
      style="width: 200px; height: 100px;"
    >
      Box Content
    </div>
  </div>
</body>
`;

exports[`Box component with custom element renders with a custom HTML element 1`] = `
<body>
  <div>
    <section
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </section>
  </div>
</body>
`;

exports[`Box component with custom element renders with a custom React component 1`] = `
<body>
  <div>
    <span
      class="Box Box-display--block Box-shadow--none Box-borderRadius--none Box-background--transparent Box-borderColor--none Box-position--static"
      data-test="DesignSystem-Box"
    >
      Box Content
    </span>
  </div>
</body>
`;
